[tool.poetry]
name = "break-from-screen"
version = "0.1.0"
description = ""
authors = ["daniel.fedorowsky <daniel.fedorowsky@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
progressbar = "^2.5"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
